--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         </li>
                         <a id="product-wrap">
                       <li class="nav-item ">
-                            <a href="#product-wrap" class="nav-link js-scroll-trigger">
+                            <a href="#products-wrap" class="nav-link js-scroll-trigger">
                                 Services
                             </a>
                         </li></a>
