--- a/service2.html
+++ b/service2.html
@@ -10,7 +10,7 @@
 
   <meta name="author" content="themefisher.com">
 
-  <title>Rapoo- It solutions &amp; Corporate template</title>
+  <title>EcoGuarantee- Services</title>
 
   <!-- bootstrap.min css -->
   <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
