--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                 About Us
                             </a>
                         </li>
-                        <a id="product-wrap">
+                        <a href="products-wrap">
                       <li class="nav-item ">
                             <a href="#products-wrap" class="nav-link js-scroll-trigger">
                                 Services
