--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                         <!-- Links -->
                         <ul class="footer-links ">
                             <li>
-                                <a href="#">
+                                <a href="https://shailey-10.github.io/service.html">
                                     Services
                                 </a>
                             </li>
