--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 
   <meta name="author" content="themefisher.com">
 
-  <title>EkoGuarantee - Contact &amp; Corporate template</title>
+  <title>Eko-Guarantee - Contact Us</title>
 
   <!-- bootstrap.min css -->
   <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
@@ -43,7 +43,7 @@
     ================================================= -->
     <nav class="navbar navbar-expand-lg navbar-dark trans-navigation fixed-top navbar-togglable">
         <div class="container">
-            <a class="navbar-brand" href="index-3.html">
+            <a class="navbar-brand" href="index.html">
                 <h3>EkoGuarantee</h3>
             </a>
             <!-- Toggler -->
