--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
                         </li></a>
                         <li class="nav-item ">
-                            <a href="#" class="nav-link js-scroll-trigger">
+                            <a href="about.html" class="nav-link js-scroll-trigger">
                                 About Us
                             </a>
                         </li>
@@ -405,7 +405,16 @@
                                     Privacy policy
                                 </a>
                             </li>
-                            
+                            <li>
+                                <a href="#">
+                                    Affiliate services
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Help and support
+                                </a>
+                            </li>
                             <li>
                                 <a href="#">
                                     Frequently Asked Question
@@ -422,7 +431,7 @@
                         <!-- Links -->
                         <ul class="footer-links ">
                             <li>
-                                <a href="https://shailey-10.github.io/service.html">
+                                <a href="#">
                                     Services
                                 </a>
                             </li>
@@ -431,7 +440,17 @@
                                     About Us
                                 </a>
                             </li>
-                           
+                            <li>
+                                <a href="#">
+                                    Pricing
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Products Shop
+                                </a>
+                            </li>
+
                             <li>
                                 <a href="#">
                                     Contact
