udated about link

--- a/index.html
+++ b/index.html
@@ -131,11 +131,12 @@
                             </a>
 
                         </li></a>
+                        <a href="about.html">
                         <li class="nav-item ">
                             <a href="about.html" class="nav-link js-scroll-trigger">
                                 About Us
                             </a>
-                        </li>
+                        </li></a>
                         <a href="products-wrap">
                       <li class="nav-item ">
                             <a href="#products-wrap" class="nav-link js-scroll-trigger">
