--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="it">
-  <meta name="keywords" content="Rapoo,creative, agency, startup,onepage, clean, modern,business, company,it">
+  <meta name="keywords" content="eko-guarantee, company,it">
 
   <meta name="author" content="themefisher.com">
 
@@ -132,7 +132,7 @@
 
                         </li></a>
                         <li class="nav-item ">
-                            <a href="#" class="nav-link js-scroll-trigger">
+                            <a href="about.html" class="nav-link js-scroll-trigger">
                                 About Us
                             </a>
                         </li>
@@ -422,12 +422,12 @@
                         <!-- Links -->
                         <ul class="footer-links ">
                             <li>
-                                <a href="#">
+                                <a href="service.html">
                                     Services
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="about.html">
                                     About Us
                                 </a>
                             </li>
