--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                             </li>
                            
                             <li>
-                                <a href="#">
+                                <a href="contact.html">
                                     Contact
                                 </a>
                             </li>
