--- a/about.html
+++ b/about.html
@@ -55,30 +55,39 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <!-- Links -->
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item ">
-                      <a href="about.html" class="nav-link js-scroll-trigger">
+                  <a href="index.html">  <li class="nav-item ">
+                      <a href="index.html" class="nav-link js-scroll-trigger">
                           Home
                       </a>
-                    </li>
-                    <li class="nav-item ">
+                    </li> </a>
+                    <a href="about.html">
+                  <li class="nav-item ">
                         <a href="about.html" class="nav-link js-scroll-trigger">
-                            About
+                            About Us
                         </a>
-                    </li>
+                    </li></a>
                     <li class="nav-item ">
-                        <a href="service.html" class="nav-link js-scroll-trigger">
+                        <a href="" class="nav-link js-scroll-trigger">
                             Services
                         </a>
                     </li>
 
-
-
-
                     <li class="nav-item ">
-                        <a href="contact.html" class="nav-link">
-                            Contact
+                        <a href="" class="nav-link js-scroll-trigger">
+                            Get Registered
                         </a>
                     </li>
+                    <li class="nav-item ">
+                        <a href="" class="nav-link js-scroll-trigger">
+                            Career
+                        </a>
+                    </li>
+                      <a href="contact.html">
+                    <li class="nav-item ">
+                        <a href="contact.html" class="nav-link">
+                            Contact Us
+                        </a>
+                    </li></a>
                 </ul>
             </div> <!-- / .navbar-collapse -->
         </div> <!-- / .container -->
