--- a/about.html
+++ b/about.html
@@ -221,7 +221,9 @@ The complexity and diversity in the regulatory systems of the NON GMO market mak
                     <div class="project-content-block">
                         <h4>Do you know who we are?</h4>
                         <h2>More than just service your products...</h2>
-                        <p>Explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and we will give you a complete account of the system.</p>
+                        <p>The complexity and diversity in the regulatory systems of the NON GMO market makes it difficult for the organizations to approach the global platform.
+We provide market oriented solutions to our clients to help them emerge better and at par with others internationally.
+Our certification is flexible and focused on meeting the market requirements and standards.</p>
                     </div>
                 </div>
             </div>
