--- a/about.html
+++ b/about.html
@@ -116,27 +116,42 @@
 
 
 
-    <section id="projects" class="section-bottom">
-        <div class="container">
 
 
-            <div class="row py-4">
-                <div class="col-lg-7 col-md-12 col-sm-12 ">
-                    <div class="single-project">
-                        <img src="images/bg/banner_bg.jpg" alt="" class="img-fluid">
+    <section class="section" id="projects-wrap">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="section-heading">
+                            <h1 class="text-white">We are trying to deliver 100% quality product and success their business to achieve ultimate goal.</h1>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 ">
-                    <div class="project-content-block">
-                        <h4>Do you know who we are?</h4>
-                        <h2>More than just service your products...</h2>
-                        <p>Explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and we will give you a complete account of the system.</p>
+                    <div class="col-lg-6">
+                        <p class="lead text-white">We are providing best service since 1990 to present , committed to best service delivery.Nullam metus enim, placerat in lacus vel, porttitor egestas libero. Etiam ex risus, feugiat eget accumsan eu, sagittis eu urna. In eget ultrices metus. Nunc accumsan </p>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
+        <section id="projects" class="section-bottom">
+            <div class="container">
+                <div class="row py-4">
+                    <div class="col-lg-7 col-md-12 col-sm-12 ">
+                        <div class="single-project">
+                            <img src="images/bg/banner_bg.jpg" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-12 col-sm-12 ">
+                        <div class="project-content-block">
+                            <h4>Do you know who we are?</h4>
+                            <h2>More than just service your products...</h2>
+                            <p>Explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and we will give you a complete account of the system.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
  <section class="section" id="blog">
         <div class="container">
