--- a/about.html
+++ b/about.html
@@ -124,11 +124,11 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="section-heading">
-                            <h1 class="text-white">We are trying to deliver 100% quality product and success their business to achieve ultimate goal.</h1>
+                            <h1 class="text-white">EKO Guarantee Private limited possess more than 2 decades of experience wide its promoters, providing expertise world wide to meet the increasing demand of eco-friendly and sustainable products.</h1>
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <p class="lead text-white">We are providing best service since 1990 to present , committed to best service delivery.Nullam metus enim, placerat in lacus vel, porttitor egestas libero. Etiam ex risus, feugiat eget accumsan eu, sagittis eu urna. In eget ultrices metus. Nunc accumsan </p>
+                        <p class="lead text-white">EKO Guarantee Private limited possess more than 2 decades of experience wide its promoters, providing expertise world wide to meet the increasing demand of eco-friendly and sustainable products. We provide market oriented solutions to our clients to help them emerge better and at par with others internationally. </p>
                     </div>
                 </div>
             </div>
@@ -146,7 +146,7 @@
                         <div class="project-content-block">
                             <h4>Do you know who we are?</h4>
                             <h2>More than just service your products...</h2>
-                            <p>Explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and we will give you a complete account of the system.</p>
+                            <p>Our certification is flexible and focused on meeting the market requirements and standards. Once the Non- Gmo project verification is complete and verified , the applicant will be issued a certificate and will be labeled as “ NON-GMO Verified”</p>
                         </div>
                     </div>
                 </div>
