--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     ================================================= -->
     <nav class="navbar navbar-expand-lg navbar-dark trans-navigation fixed-top navbar-togglable">
         <div class="container">
-            <a class="navbar-brand" href="index-3.html">
+            <a class="navbar-brand" href="index.html">
                 <h3>Eko-Guarantee</h3>
             </a>
             <!-- Toggler -->
@@ -239,9 +239,9 @@
                     <div class="footer-widget">
                         <!-- Brand -->
                         <a href="#" class="footer-brand text-white">
-                            Rapoo
+                            Eko-Guarantee
                         </a>
-                        <p>Each theme featured at the Bootstrap marketplace has been reviewed by Bootstrap's creators.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>Certifying Non-Gmo integrity to national and international standards .</p>
                     </div>
                 </div>
 
@@ -260,16 +260,7 @@
                                     Privacy policy
                                 </a>
                             </li>
-                            <li>
-                                <a href="#">
-                                    Affiliate services
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Help and support
-                                </a>
-                            </li>
+                            
                             <li>
                                 <a href="#">
                                     Frequently Asked Question
@@ -286,26 +277,16 @@
                         <!-- Links -->
                         <ul class="footer-links ">
                             <li>
-                                <a href="#">
+                                <a href="service.html">
                                     Services
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="about.html">
                                     About Us
                                 </a>
                             </li>
-                            <li>
-                                <a href="#">
-                                    Pricing
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Products Shop
-                                </a>
-                            </li>
-
+                            
                             <li>
                                 <a href="#">
                                     Contact
@@ -340,7 +321,7 @@
                 <div class="col-lg-12">
                     <!-- Copyright -->
                     <p class="footer-copy ">
-                        &copy; Copyright <span class="current-year">Themefisher</span> All rights reserved.
+                        &copy; Copyright <span class="current-year">Eko-Guarantee</span> All rights reserved.
                     </p>
                 </div>
             </div> <!-- / .row -->
