--- a/about.html
+++ b/about.html
@@ -288,7 +288,7 @@
                             </li>
                             
                             <li>
-                                <a href="#">
+                                <a href="contact.html">
                                     Contact
                                 </a>
                             </li>
