--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                         </a>
                     </li></a>
                     <li class="nav-item ">
-                        <a href="" class="nav-link js-scroll-trigger">
+                        <a href="service.html" class="nav-link js-scroll-trigger">
                             Services
                         </a>
                     </li>
