--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         </li></a>
                         <a href="products-wrap">
                       <li class="nav-item ">
-                            <a href="#products-wrap" class="nav-link js-scroll-trigger">
+                            <a href="service.html" class="nav-link js-scroll-trigger">
                                 Services
                             </a>
                         </li></a>
