--- a/index.html
+++ b/index.html
@@ -423,19 +423,19 @@
                         <!-- Links -->
                         <ul class="footer-links ">
                             <li>
-                                <a href="#">
+                                <a href="service.html">
                                     Services
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="about.html">
                                     About Us
                                 </a>
                             </li>
                             
 
                             <li>
-                                <a href="#">
+                                <a href="contact.html">
                                     Contact
                                 </a>
                             </li>
