--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark trans-navigation fixed-top navbar-togglable">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <h3>EkoGuarantee</h3>
+                <h3>Eko-Guarantee</h3>
             </a>
             <!-- Toggler -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
