--- a/about.html
+++ b/about.html
@@ -124,11 +124,11 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="section-heading">
-                            <h1 class="text-white">EKO Guarantee Private limited possess more than 2 decades of experience wide its promoters, providing expertise world wide to meet the increasing demand of eco-friendly and sustainable products.</h1>
+                            <h1 class="text-white">EKO-Guarantee Private limited possess more than 2 decades of experience wide its promoters, providing expertise world wide to meet the increasing demand of eco-friendly and sustainable products.</h1>
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <p class="lead text-white">EKO Guarantee Private limited possess more than 2 decades of experience wide its promoters, providing expertise world wide to meet the increasing demand of eco-friendly and sustainable products. We provide market oriented solutions to our clients to help them emerge better and at par with others internationally. </p>
+                        <p class="lead text-white">EKO-Guarantee Private limited possess more than 2 decades of experience wide its promoters, providing expertise world wide to meet the increasing demand of eco-friendly and sustainable products. We provide market oriented solutions to our clients to help them emerge better and at par with others internationally. </p>
                     </div>
                 </div>
             </div>
