--- a/service.html
+++ b/service.html
@@ -10,7 +10,7 @@
 
   <meta name="author" content="themefisher.com">
 
-  <title>EcoGuarantee-Servicees &amp; Corporate template</title>
+  <title>Eco-Guarantee-Services</title>
 
   <!-- bootstrap.min css -->
   <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
@@ -540,7 +540,7 @@
                     <div class="footer-widget">
                         <!-- Brand -->
                         <a href="#" class="footer-brand text-white">
-                            EkoGuarantee
+                            Eko-Guarantee
                         </a>
                         <p>Each theme featured at the Bootstrap marketplace has been reviewed by Bootstrap's creators.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
