--- a/service2.html
+++ b/service2.html
@@ -10,7 +10,7 @@
 
   <meta name="author" content="themefisher.com">
 
-  <title>EcoGuarantee- Services</title>
+  <title>Eko-Guarantee- Services</title>
 
   <!-- bootstrap.min css -->
   <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
@@ -343,16 +343,7 @@
                                        Privacy policy
                                    </a>
                                </li>
-                               <li>
-                                   <a href="#">
-                                       Affiliate services
-                                   </a>
-                               </li>
-                               <li>
-                                   <a href="#">
-                                       Help and support
-                                   </a>
-                               </li>
+                               
                                <li>
                                    <a href="#">
                                        Frequently Asked Question
@@ -369,25 +360,16 @@
                            <!-- Links -->
                            <ul class="footer-links ">
                                <li>
-                                   <a href="#">
+                                   <a href="service.html">
                                        Services
                                    </a>
                                </li>
                                <li>
-                                   <a href="#">
+                                   <a href="about.html">
                                        About Us
                                    </a>
                                </li>
-                               <li>
-                                   <a href="#">
-                                       Pricing
-                                   </a>
-                               </li>
-                               <li>
-                                   <a href="#">
-                                       Products Shop
-                                   </a>
-                               </li>
+                               
 
                                <li>
                                    <a href="#">
