--- a/service2.html
+++ b/service2.html
@@ -372,7 +372,7 @@
                                
 
                                <li>
-                                   <a href="#">
+                                   <a href="contact.html">
                                        Contact
                                    </a>
                                </li>
