--- a/service.html
+++ b/service.html
@@ -10,7 +10,7 @@
 
   <meta name="author" content="themefisher.com">
 
-  <title>Eco-Guarantee-Services</title>
+  <title>Eko-Guarantee-Services</title>
 
   <!-- bootstrap.min css -->
   <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
