--- a/service.html
+++ b/service.html
@@ -147,8 +147,8 @@
     ================================================= -->
     <nav class="navbar navbar-expand-lg navbar-dark trans-navigation fixed-top navbar-togglable">
         <div class="container">
-            <a class="navbar-brand" href="index-3.html">
-                <h3>EkoGuarantee</h3>
+            <a class="navbar-brand" href="index.html">
+                <h3>Eko-Guarantee</h3>
             </a>
             <!-- Toggler -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -166,12 +166,12 @@
 
                     </li>
                     <li class="nav-item ">
-                        <a href="#" class="nav-link js-scroll-trigger">
+                        <a href="about.html" class="nav-link js-scroll-trigger">
                             About Us
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a href="#" class="nav-link js-scroll-trigger">
+                        <a href="service.html" class="nav-link js-scroll-trigger">
                             Services
                         </a>
                     </li>
@@ -188,7 +188,7 @@
                     </li>
 
                     <li class="nav-item ">
-                        <a href="#" class="nav-link">
+                        <a href="contact.html" class="nav-link">
                             Contact Us
                         </a>
                     </li>
