--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary main-nav navbar-togglable rounded-radius">
 
                 <a class="navbar-brand d-lg-none d-block" href="">
-                    <h4>EkoGuarantee</h4>
+                    <h4>Eko-Guarantee</h4>
                 </a>
                 <!-- Toggler -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -302,7 +302,7 @@
                     <div class="web-service-block">
                         <i class=""><img src ="images/icon/review.png" height="100px" width="75px"></i>
                         <h3>Document Review</h3>
-                        <p>EKO_GUARANTEE technical evaluator reviews the documents you have submitted. We may ask for clarification or more information during the reiews</p>
+                        <p>EKO-GUARANTEE technical evaluator reviews the documents you have submitted. We may ask for clarification or more information during the reiews</p>
                     </div>
                 </div>
 
