--- a/service.html
+++ b/service.html
@@ -371,7 +371,7 @@
 
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p class="pl-3">Want to know more about this? <a href="#">Contact us</a></p>
+                    <p class="pl-3">Want to know more about this? <a href="contact.html">Contact us</a></p>
                 </div>
             </div>
         </div>
@@ -596,16 +596,8 @@
                                     Privacy policy
                                 </a>
                             </li>
-                            <li>
-                                <a href="#">
-                                    Affiliate services
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Help and support
-                                </a>
-                            </li>
+
+                           
                             <li>
                                 <a href="#">
                                     Frequently Asked Question
@@ -622,28 +614,19 @@
                         <!-- Links -->
                         <ul class="footer-links ">
                             <li>
-                                <a href="#">
+                                <a href="service.html">
                                     Services
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="about.html">
                                     About Us
                                 </a>
                             </li>
-                            <li>
-                                <a href="#">
-                                    Pricing
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Products Shop
-                                </a>
-                            </li>
+                       
 
                             <li>
-                                <a href="#">
+                                <a href="contact.html">
                                     Contact
                                 </a>
                             </li>
