--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                             <i class="fa fa-question-circle"></i>
                         </div>
                         <h4 class="mb-2">Why Non GMO?</h4>
-                        <p>Non-GMO Stands for non-genetically modified organsism, an refers to plants, animals or other organisms whose gentic material is changed in ways that do no occur naturally. Brands that achieve NON-GMO roduct verification on their products, provides them leverage over others in the global market.</p>
+                        <p>NON-GMO Stands for non-genetically modified organsism, an refers to plants, animals or other organisms whose gentic material is changed in ways that do no occur naturally. Brands that achieve NON-GMO roduct verification on their products, provides them leverage over others in the global market.</p>
                     </div>
                 </div>
 
@@ -249,7 +249,7 @@
                             <i class="fa fa-question-circle"></i>
                         </div>
                         <h4 class="mb-2">How can I avoid GMOS</h4>
-                        <p>In the US GMOS are in majorority of onventional processed food. To avoid GMOs, look for the Non-GMO Project verfied label.</p>
+                        <p>In the US GMOS are in majorority of onventional processed food. To avoid GMOs, look for the NON-GMO Project verfied label.</p>
                     </div>
                 </div>
             </div>
@@ -324,7 +324,7 @@
                     <div class="web-service-block">
                         <i class=""><img src ="images/icon/cert.png" height="75px" width="75px"></i>
                         <h3>Certification And Ongoing Compliance</h3>
-                        <p>After approval, eligible to use your Non-GMO mark. An annual renewal evaluation will take place from this point forward. Products and facilities can be added to scope mid year.</p>
+                        <p>After approval, eligible to use your NON-GMO mark. An annual renewal evaluation will take place from this point forward. Products and facilities can be added to scope mid year.</p>
                     </div>
                 </div>
             </div>
@@ -387,7 +387,7 @@
                         <a href="#" class="footer-brand text-white">
                             EKO-GUARANTEE
                         </a>
-                        <p>Certifying Non-Gmo integrity to national and international standards .</p>
+                        <p>Certifying NON-Gmo integrity to national and international standards .</p>
                     </div>
                 </div>
 
