--- a/contact.html
+++ b/contact.html
@@ -62,12 +62,12 @@
 
                     </li>
                     <li class="nav-item ">
-                        <a href="#" class="nav-link js-scroll-trigger">
+                        <a href="about.html" class="nav-link js-scroll-trigger">
                             About Us
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a href="#" class="nav-link js-scroll-trigger">
+                        <a href="service.html" class="nav-link js-scroll-trigger">
                             Services
                         </a>
                     </li>
@@ -84,7 +84,7 @@
                     </li>
 
                     <li class="nav-item ">
-                        <a href="#" class="nav-link">
+                        <a href="contact.html" class="nav-link">
                             Contact Us
                         </a>
                     </li>
@@ -132,7 +132,7 @@
                     <div class="contact-info-block text-center">
                         <i class="pe-7s-mail"></i>
                         <h4>Email</h4>
-                        <p class="lead">supportdb@dthememascot.com</p>
+                        <p class="lead">info@eko-guarantee.com</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-md-6">
@@ -319,12 +319,12 @@
                            <!-- Links -->
                            <ul class="footer-links ">
                                <li>
-                                   <a href="#">
+                                   <a href="service.html">
                                        Services
                                    </a>
                                </li>
                                <li>
-                                   <a href="#">
+                                   <a href="about.html">
                                        About Us
                                    </a>
                                </li>
@@ -332,7 +332,7 @@
                                </li>
 
                                <li>
-                                   <a href="#">
+                                   <a href="contact.html">
                                        Contact
                                    </a>
                                </li>
