--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <i class="ti-email"></i>
                         </div>
                         <div class="info-block">
-                            <h5 class="font-weight-500">info@example.com</h5>
+                            <h5 class="font-weight-500">info@eko-guarantee.com</h5>
                             <p>Email Us</p>
                         </div>
                     </div>
