removed Non GMO

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 
     <section id="projects" class="section-bottom">
         <div class="container">
-            <div class="row justify-content-center">
+      <!--      <div class="row justify-content-center">
 
                 <div class="col-lg-5 col-md-10 col-sm-12 mb-5">
                     <div class="single-project">
@@ -359,7 +359,7 @@
                             <p>Project Verification is applicable at various supply chain levels</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-lg-5 col-md-10 col-sm-12 ">
                     <div class="single-project">
                       <a href="service2.html"> <img src="images/projects/cert.jpg" alt="" class="img-fluid"></a>
