--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="top-bar-left text-white">
                         <i class="fa fa-map-marker"></i>
-                        <span class="ml-2">Eko-Guarentee</span>
+                        <span class="ml-2">Eko-Guarantee</span>
                     </div>
                 </div>
 
@@ -68,7 +68,7 @@
                     <div class="logo d-none d-lg-block">
                         <!-- Brand -->
                         <a class="navbar-brand js-scroll-trigger" href="index.html">
-                            <h2>Eko-Guarentee</h2>
+                            <h2>Eko-Guarantee</h2>
                         </a>
                     </div>
                 </div>
