--- a/service2.html
+++ b/service2.html
@@ -114,7 +114,7 @@
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary main-nav navbar-togglable rounded-radius">
 
                 <a class="navbar-brand d-lg-none d-block" href="">
-                    <h4>EkoGuarantee</h4>
+                    <h4>Eko-Guarantee</h4>
                 </a>
                 <!-- Toggler -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -132,12 +132,12 @@
 
                         </li>
                         <li class="nav-item ">
-                            <a href="#" class="nav-link js-scroll-trigger">
+                            <a href="about.html" class="nav-link js-scroll-trigger">
                                 About Us
                             </a>
                         </li>
                         <li class="nav-item ">
-                            <a href="#" class="nav-link js-scroll-trigger">
+                            <a href="service.html" class="nav-link js-scroll-trigger">
                                 Services
                             </a>
                         </li>
@@ -154,7 +154,7 @@
                         </li>
 
                         <li class="nav-item ">
-                            <a href="#" class="nav-link">
+                            <a href="contact.html" class="nav-link">
                                 Contact Us
                             </a>
                         </li>
