--- a/contact.html
+++ b/contact.html
@@ -187,7 +187,7 @@
                                     </label>
 
                                     <div class="input-group">
-                                        <input class="form-control" name="name" id="name" required="" placeholder="John Doe" type="text">
+                                        <input class="form-control" name="name" id="name" required="" placeholder="Name" type="text">
                                     </div>
                                 </div>
                             </div>
@@ -202,7 +202,7 @@
                                     </label>
 
                                     <div class="input-group ">
-                                        <input class="form-control" name="email" id="email" required="" placeholder="john@gmail.com" type="email">
+                                        <input class="form-control" name="email" id="email" required="" placeholder="your@gmail.com" type="email">
                                     </div>
                                 </div>
                             </div>
