--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     <div class="single-project">
                       <a href="service2.html"> <img src="images/projects/cert.jpg" alt="" class="img-fluid"></a>
                         <div class="project-content">
-                            <h4>NON-GMO Certificatioin</h4>
+                            <h4>NON-GMO Certification</h4>
                             <p>We provide market oriented solutions and certifications</p>
                         </div>
                     </div>
