verification to Certification

--- a/service.html
+++ b/service.html
@@ -210,7 +210,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-9 col-md-12 col-12 text-center">
                     <div class="page-banner-content">
-                        <h1 class="display-4 font-weight-bold">NON-GMO Project Verification</h1>
+                        <h1 class="display-4 font-weight-bold">NON-GMO Project Certification</h1>
                         <p></p>
                     </div>
                 </div>
@@ -225,7 +225,7 @@
             <div class="row justify-content-center mb-5">
                 <div class="col-lg-7 pl-4 text-center">
                     <div class="service-heading">
-                        <h1>Project Verification is applicable at various supply chain levels.</h1>
+                        <h1>Project Certification is applicable at various supply chain levels.</h1>
                     </div>
                 </div>
             </div>
@@ -384,7 +384,7 @@
                     <div class="section-heading">
                         <!-- Heading -->
                         <h2 class="section-title mb-2 text-white">
-                            WHY NON-GMO VERIFICATION?
+                            WHY NON-GMO Certification?
                         </h2>
 
                         <!-- Subheading -->
@@ -511,8 +511,8 @@
             </li>
             <li>
         <div class="content">
-          <h3>Verification of final reports.</h3>
-          <p>THe final report will be verified.</p>
+          <h3>Certification of final reports.</h3>
+          <p>THe final report will be certified.</p>
 
         </div>
         <div class="time">
