--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="section-heading">
-                        <h1 class="text-white">Our Services :</h1>
+                        <h1 class="text-white">Our Service :</h1>
                     </div>
                 </div>
                 <div class="col-lg-6">
