--- a/service.html
+++ b/service.html
@@ -542,43 +542,11 @@
                         <a href="#" class="footer-brand text-white">
                             Eko-Guarantee
                         </a>
-                        <p>Each theme featured at the Bootstrap marketplace has been reviewed by Bootstrap's creators.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>Certifying NON-Gmo integrity to national and international standards.</p>
                     </div>
                 </div>
 
-                <div class="col-lg-3 ml-lg-auto col-sm-12">
-                    <div class="footer-widget">
-                        <h3>Account</h3>
-                        <!-- Links -->
-                        <ul class="footer-links ">
-                            <li>
-                                <a href="#">
-                                    Terms and conditions
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Privacy policy
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Affiliate services
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Help and support
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Frequently Asked Question
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+               
 
 
                 <div class="col-lg-3 ml-lg-auto col-sm-12">
