--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="top-bar-left text-white">
                         <i class="fa fa-map-marker"></i>
-                        <span class="ml-2">Eko-Guarantee</span>
+                        <span class="ml-2">Eko-Guarentee</span>
                     </div>
                 </div>
 
@@ -68,7 +68,7 @@
                     <div class="logo d-none d-lg-block">
                         <!-- Brand -->
                         <a class="navbar-brand js-scroll-trigger" href="index.html">
-                            <h2>Eko-Guarantee</h2>
+                            <h2>Eko-Guarentee</h2>
                         </a>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                             <i class="ti-email"></i>
                         </div>
                         <div class="info-block">
-                            <h5 class="font-weight-500">info@eko-guarantee.com</h5>
+                            <h5 class="font-weight-500">info@example.com</h5>
                             <p>Email Us</p>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary main-nav navbar-togglable rounded-radius">
 
                 <a class="navbar-brand d-lg-none d-block" href="">
-                    <h4>Eko-Guarantee</h4>
+                    <h4>EkoGuarantee</h4>
                 </a>
                 <!-- Toggler -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -139,7 +139,7 @@
                         </li></a>
                         <a href="products-wrap">
                       <li class="nav-item ">
-                            <a href="service.html" class="nav-link js-scroll-trigger">
+                            <a href="#products-wrap" class="nav-link js-scroll-trigger">
                                 Services
                             </a>
                         </li></a>
@@ -229,7 +229,7 @@
                             <i class="fa fa-question-circle"></i>
                         </div>
                         <h4 class="mb-2">Why Non GMO?</h4>
-                        <p>NON-GMO Stands for non-genetically modified organsism, an refers to plants, animals or other organisms whose gentic material is changed in ways that do no occur naturally. Brands that achieve NON-GMO roduct verification on their products, provides them leverage over others in the global market.</p>
+                        <p>Non-GMO Stands for non-genetically modified organsism, an refers to plants, animals or other organisms whose gentic material is changed in ways that do no occur naturally. Brands that achieve NON-GMO roduct verification on their products, provides them leverage over others in the global market.</p>
                     </div>
                 </div>
 
@@ -249,7 +249,7 @@
                             <i class="fa fa-question-circle"></i>
                         </div>
                         <h4 class="mb-2">How can I avoid GMOS</h4>
-                        <p>In the US GMOS are in majorority of onventional processed food. To avoid GMOs, look for the NON-GMO Project verfied label.</p>
+                        <p>In the US GMOS are in majorority of onventional processed food. To avoid GMOs, look for the Non-GMO Project verfied label.</p>
                     </div>
                 </div>
             </div>
@@ -302,7 +302,7 @@
                     <div class="web-service-block">
                         <i class=""><img src ="images/icon/review.png" height="100px" width="75px"></i>
                         <h3>Document Review</h3>
-                        <p>EKO-GUARANTEE technical evaluator reviews the documents you have submitted. We may ask for clarification or more information during the reiews</p>
+                        <p>EKO_GUARANTEE technical evaluator reviews the documents you have submitted. We may ask for clarification or more information during the reiews</p>
                     </div>
                 </div>
 
@@ -324,7 +324,7 @@
                     <div class="web-service-block">
                         <i class=""><img src ="images/icon/cert.png" height="75px" width="75px"></i>
                         <h3>Certification And Ongoing Compliance</h3>
-                        <p>After approval, eligible to use your NON-GMO mark. An annual renewal evaluation will take place from this point forward. Products and facilities can be added to scope mid year.</p>
+                        <p>After approval, eligible to use your Non-GMO mark. An annual renewal evaluation will take place from this point forward. Products and facilities can be added to scope mid year.</p>
                     </div>
                 </div>
             </div>
@@ -337,7 +337,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="section-heading">
-                        <h1 class="text-white">Our Service :</h1>
+                        <h1 class="text-white">Our Services :</h1>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -349,22 +349,22 @@
 
     <section id="projects" class="section-bottom">
         <div class="container">
-      <!--      <div class="row justify-content-center">
+            <div class="row justify-content-center">
 
-                <div class="col-lg-5 col-md-10 col-sm-12 mb-5">
-                    <div class="single-project">
-                      <a href="service.html">  <img src="images/projects/verif.jpg" alt="" class="img-fluid"> </a>
-                        <div class="project-content">
-                            <h4>NON-GMO project verification</h4>
-                            <p>Project Verification is applicable at various supply chain levels</p>
-                        </div>
-                    </div>
-                </div> -->
+              <div class="col-lg-5 col-md-10 col-sm-12 mb-5">
+                  <div class="single-project">
+                    <a href="service.html">  <img src="images/projects/verif.jpg" alt="" class="img-fluid"> </a>
+                      <div class="project-content">
+                          <h4>NON-GMO project verification</h4>
+                          <p>Project Verification is applicable at various supply chain levels</p>
+                      </div>
+                  </div>
+              </div>
                 <div class="col-lg-5 col-md-10 col-sm-12 ">
                     <div class="single-project">
                       <a href="service2.html"> <img src="images/projects/cert.jpg" alt="" class="img-fluid"></a>
                         <div class="project-content">
-                            <h4>NON-GMO Certification</h4>
+                            <h4>NON-GMO Certificatioin</h4>
                             <p>We provide market oriented solutions and certifications</p>
                         </div>
                     </div>
@@ -387,7 +387,7 @@
                         <a href="#" class="footer-brand text-white">
                             EKO-GUARANTEE
                         </a>
-                        <p>Certifying NON-Gmo integrity to national and international standards .</p>
+                        <p>Certifying Non-Gmo integrity to national and international standards .</p>
                     </div>
                 </div>
 
@@ -406,7 +406,16 @@
                                     Privacy policy
                                 </a>
                             </li>
-                            
+                            <li>
+                                <a href="#">
+                                    Affiliate services
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Help and support
+                                </a>
+                            </li>
                             <li>
                                 <a href="#">
                                     Frequently Asked Question
@@ -423,19 +432,28 @@
                         <!-- Links -->
                         <ul class="footer-links ">
                             <li>
-                                <a href="service.html">
+                                <a href="#">
                                     Services
                                 </a>
                             </li>
                             <li>
-                                <a href="about.html">
+                                <a href="#">
                                     About Us
                                 </a>
                             </li>
-                            
+                            <li>
+                                <a href="#">
+                                    Pricing
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Products Shop
+                                </a>
+                            </li>
 
                             <li>
-                                <a href="contact.html">
+                                <a href="#">
                                     Contact
                                 </a>
                             </li>
